# robotiq_tcp

./: .gitignore  LICENSE  README.md  dependencies.rosinstall  travis.yml
robotiq_epick_control/: CMakeLists.txt  package.xml  setup.py
robotiq_epick_control/cfg/: Epick.cfg
robotiq_epick_control/include/robotiq_epick_grippers_control/: robotiq_epick_grippers_tcp_client.h
robotiq_epick_control/include/robotiq_epick_interface/: epick_gripper_interface.h  epick_server.h
robotiq_epick_control/include/robotiq_modbus_tcp/: tcp_manager.h
robotiq_epick_control/launch/: robotiq_epick_tcp.launch  robotiq_vacuum_grippers_tcp.launch
robotiq_epick_control/msg/: RobotiqVacuumGrippers_robot_input.msg
robotiq_epick_control/src/robotiq_epick_grippers_control/: publisher.py  robotiq_epick_grippers_tcp_client.cpp  robotiq_epick_grippers_tcp_node.cpp  robotiq_vacuum_grippers_ctrl.py
robotiq_epick_control/src/robotiq_epick_interface/: epick_gripper_interface.cpp  epick_server.cpp  epick_server_node.cpp
robotiq_epick_gripper_visualization/: CMakeLists.txt  README.md  package.xml
robotiq_epick_gripper_visualization/launch/: test_epick_model.launch
robotiq_epick_gripper_visualization/urdf/: robotiq_epick_model_macro.xacro
robotiq_epick_visualization/: CMakeLists.txt  README.md  package.xml  visualize.rviz
robotiq_epick_visualization/launch/: test_epick_model.launch
robotiq_epick_visualization/urdf/: robotiq_epick.gazebo.xacro  robotiq_epick_model.xacro  robotiq_epick_model_macro.xacro
