<?xml version="1.0"?>
<package format="2">
  <name>robotiq_epick_control</name>
  <version>1.0.0</version>
  <description>Package to control the vacuum grippers (currently the EPick and AirPick) from Robotiq inc.</description>

  <author>Valerio Magnago</author>
  <author>Martin Stimpfl</author>
  <maintainer email="valerio.magnago@fraunhofer.it">Valerio Magnago</maintainer>
  <maintainer email="martin.stimpfl@fraunhofer.it">Valerio Magnago</maintainer>  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>modbus</exec_depend>

</package>
